<resources>
    <string name="app_name">EPhone</string>
    <string name="chart">Chart</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credited">Credited</string>
    <string name="debited">Debited</string>
    <string name="all">All</string>
    <string name="recent">Recent</string>
    <string name="chart_header">Visual Chart</string>

    <string name="bank_name">Bank Name</string>
    <string name="estimated_balance">Estimated Balance :</string>
    <string name="last_text">Last Text :</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string-array name="dropdown_items">
        <item>All</item>
        <item>CBE</item>
        <item>BOA</item>
    </string-array>
</resources>