<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/mainHolder"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/xSmall"
    android:elevation="@dimen/xSmall"
    android:layout_margin="@dimen/xxSmall"
    app:cardBackgroundColor="@color/secondary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/xxLarge"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:id="@+id/bankName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            android:layout_marginBottom="@dimen/small"
            android:textSize="@dimen/header_text"
            android:textColor="@color/gray2"
            />
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/balanceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated_balance"
                android:textColor="@color/white"

                />
            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:textColor="@color/white"


                />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lastCheckTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_text"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/lastCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:textColor="@color/white"

                />
        </LinearLayout>
    </LinearLayout>



</com.google.android.material.card.MaterialCardView>