<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/xLarge"
        android:paddingTop="@dimen/xLarge"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView android:ellipsize="end"
                android:id="@+id/homeHeader"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:singleLine="true"
                android:layout_weight="1"
                android:textSize="@dimen/header_text"
                android:text="@string/recent"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:backgroundTint="@color/purple_200"
                />
        </LinearLayout>

        <LinearLayout android:gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xLarge"
            android:layout_width="match_parent"
            android:id="@+id/showAll"
            android:orientation="horizontal">
            <TextView
                android:ellipsize="end"
                android:id="@+id/txtAll"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:layout_width="0dp"
                android:paddingVertical="@dimen/xxSmall"
                android:singleLine="false"
                android:textAlignment="center"
                style="@style/txtRoundedActive"
                android:maxLines="2"
                android:textSize="@dimen/normal_text"
                android:text="@string/all"/>
            <LinearLayout
                android:id="@+id/debited"
                style="@style/txtRoundedInactive"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_weight="0.4"
                android:paddingVertical="@dimen/xxSmall"
                android:layout_width="0dp"
                android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDebited"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:layout_width="0dp"
                    android:singleLine="false"
                    android:textAlignment="center"
                    android:textSize="@dimen/normal_text"
                    android:text="@string/debited"/>
                <ImageView
                    android:id="@+id/imageArrowup"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/xLarge"
                    android:layout_width="@dimen/small"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow_up"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/credited"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="0.42"
                android:layout_width="0dp"
                android:orientation="horizontal"
                style="@style/txtRoundedInactive"
                android:paddingVertical="@dimen/xxSmall"

                >
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCredited"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:layout_width="0dp"
                    android:singleLine="false"
                    android:textAlignment="center"
                    android:textSize="@dimen/normal_text"
                    android:text="@string/credited"/>
                <ImageView
                    android:id="@+id/imagedown"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/xLarge"
                    android:layout_width="@dimen/small"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow_down_green"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:gravity="center_horizontal"
            android:id="@+id/home_recycle_view"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxLarge"
            android:layout_width="match_parent"
            android:orientation="vertical"/>
    </LinearLayout>

</FrameLayout>